# crypto-algorithm

./: .env.example  .eslintrc.json  .gitignore  10_OUT_OF_10_FEATURES.md  CLAUDE.md  DASHBOARD_GUIDE.md  DEPLOYMENT.md  Dockerfile  GRID_STRATEGY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEVELOPMENT.md  ORDER_TRACKING_GUIDE.md  PRE_COMMIT_GUIDE.md  QUICK_START.md  README.md  SECURITY_ASSESSMENT.md  SECURITY_FIXES_APPLIED.md  TESTING.md  TESTING_SUMMARY.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  start-local.sh  tsconfig.json  vitest.config.ts
.github/workflows/: cd.yml  ci.yml  deploy.yml  release.yml  test.yml
.husky/: README.md  pre-commit
infrastructure/terraform/: main.tf  terraform.tfvars.example
scripts/: deploy-docker-direct.sh  deploy-ec2.sh  deploy.sh  diagnose-crash.sh  run-direct.sh  setup_ec2.sh
src/: __init__.py  index.ts  main.py
src/analysis/: correlation.ts
src/bot/: __init__.py  backtesting.ts  grid.py  grid.ts  portfolioBot.ts  portfolioRisk.ts  risk.py  risk.ts
src/exchange/: __init__.py  binance.py  binance.ts  binanceStreams.ts
src/middleware/: auth.ts  validation.ts
src/models/: database.py  database.ts  schemas.py
src/services/: analytics.ts  notifications.ts  priceSimulator.ts
src/types/: index.ts  portfolio.ts
terraform/: .terraform.lock.hcl  README.md  SSL_CUSTOM_DOMAIN_GUIDE.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: README.md  config.test.ts.skip  risk.test.ts.skip  setup.ts  test_api.py  test_grid.py
(+47 files in other folders)
